# aoc-2023

./: CHANGELOG.md  x2023.cabal
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day16.hs  Main.hs  Utils.hs
